API calls from Angular, Tailwind, Angular material

--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -4,7 +4,14 @@
 // components according to the Material 3 design spec.
 // Learn more about theming and how to use it for your application's
 // custom components at https://material.angular.dev/guide/theming
+
 @use '@angular/material' as mat;
+// Customize the entire app. Change :root to your selector if you want to scope the styles.
+:root {
+  @include mat.fab-overrides((
+    container-shape: '6px'
+  ));
+}
 
 html {
   @include mat.theme((
